// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vimeo Video Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-xttaxc-VimeoVideoBlockWrapper e1wyl54e1"
  >
    <div
      class="css-9cey06-VimeoVideoBlockPlayer e1wyl54e0"
      style="width: auto; height: auto;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Vimeo Video Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-xttaxc-VimeoVideoBlockWrapper e1wyl54e1"
  >
    <div
      class="css-9cey06-VimeoVideoBlockPlayer e1wyl54e0"
      style="width: auto; height: auto;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</DocumentFragment>
`;
